--- a/frontend/natiart-app/src/app/components/customer/checkout/user-info-step/user-info-step.component.html
+++ b/frontend/natiart-app/src/app/components/customer/checkout/user-info-step/user-info-step.component.html
@@ -6,7 +6,7 @@
         <input [formControlName]="field.name" [id]="field.id"
                [ngClass]="{'border-error': getFieldError('userInfo.' + field.name)}"
                [placeholder]="field.placeholder"
-               [required]="field.required ? true : false"
+               [required]="field.required"
                [type]="field.type"
                class="mt-1 block w-full px-3 py-2 bg-white border border-primary rounded-md shadow-input placeholder-secondary-light focus:outline-none focus:ring-primary focus:border-primary sm:text-sm">
         <p *ngIf="getFieldError('userInfo.' + field.name)" class="mt-2 text-sm text-red-600">
