--- a/frontend/natiart-app/src/app/components/auth/login/login.component.html
+++ b/frontend/natiart-app/src/app/components/auth/login/login.component.html
@@ -45,7 +45,7 @@
                    name="password"
                    placeholder="Password"
                    required>
-            <button (click)="togglePasswordVisibility()"
+            <button (mousedown)="togglePasswordVisibility()"
                     [ngClass]="{'transform scale-[1.02]': passwordFocused}"
                     aria-label="Toggle password visibility"
                     class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5 text-primary hover:text-primary-dark focus:outline-none z-30 transition-colors duration-200"
