--- a/frontend/natiart-app/src/app/components/auth/signup/signup.component.html
+++ b/frontend/natiart-app/src/app/components/auth/signup/signup.component.html
@@ -54,6 +54,7 @@
         <div>
           <label class="block text-sm font-medium text-secondary" for="confirmPassword">Confirm Password</label>
           <input [ngClass]="{'border-error': getPasswordMatchError()}"
+                 (keyup.enter)="onNextStep()"
                  class="mt-1 block w-full px-3 py-2 bg-white border border-primary rounded-md shadow-input placeholder-secondary-light focus:outline-none focus:ring-primary focus:border-primary sm:text-sm"
                  formControlName="confirmPassword" id="confirmPassword"
                  placeholder="••••••••"
@@ -65,7 +66,7 @@
         </div>
 
         <div>
-          <button (click)="onNextStep()" [disabled]="signupForm.get('credentials')?.invalid"
+          <button (mousedown)="onNextStep()" [disabled]="signupForm.get('credentials')?.invalid"
                   class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-input text-sm font-medium text-white bg-primary hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-colors duration-300 disabled:opacity-50 disabled:cursor-not-allowed"
                   type="button">
             Next
@@ -222,7 +223,7 @@
         </div>
 
         <div class="flex justify-between space-x-4">
-          <button (click)="onPreviousStep()"
+          <button (mousedown)="onPreviousStep()"
                   class="flex-1 py-2 px-4 border border-primary rounded-md shadow-input text-sm font-medium text-primary bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition-colors duration-300"
                   type="button">
             Previous
