--- a/frontend/natiart-app/src/app/shared/components/natiart-form-field/natiart-form-field.component.html
+++ b/frontend/natiart-app/src/app/shared/components/natiart-form-field/natiart-form-field.component.html
@@ -1,4 +1,4 @@
-<div class="relative space-y-1 w-full">
+<div class="relative space-y-1 w-full mb-4">
   <!-- Label -->
   <label
     [for]="controlName"
