--- a/frontend/natiart-app/src/app/product/components/admin/admin-product-management/admin-product-management.component.html
+++ b/frontend/natiart-app/src/app/product/components/admin/admin-product-management/admin-product-management.component.html
@@ -1,13 +1,6 @@
 <div class="container mx-auto p-4">
-  <!-- Alert Message -->
-  <div *ngIf="alert$ | async as alert"
-       [ngClass]="{
-         'bg-green-100 border-green-400 text-green-700': alert.type === 'success',
-         'bg-red-100 border-red-400 text-red-700': alert.type === 'error'
-       }"
-       class="border-l-4 p-4 mb-4 transition-transform transform duration-500 ease-in-out">
-    <p>{{ alert.message }}</p>
-  </div>
+  <!-- Alert Messages Component -->
+  <app-alert-messages #alertMessages></app-alert-messages>
 
   <!-- Header -->
   <div class="flex justify-between items-center mb-4">
